created controller and added openai client

--- a/.env
+++ b/.env
@@ -158,3 +158,10 @@ IDE_URL_ENABLED=false
 IDE_URL_PATTERN=
 IDE_URL_PATH_MAP=
 IDE_URL_TITLE=
+
+###> openai-php/symfony ###
+# Generate your own API credentials through the OpenAI Platform portal.
+# https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=
+OPENAI_ORGANIZATION=
+###< openai-php/symfony ###
